# LibraryDB

./: CMakeLists.txt  Console.cpp  Console.hpp  DataKeeper.cpp  DataKeeper.hpp  DataList.cpp  DataList.hpp  ListScreen.cpp  ListScreen.hpp  Record.cpp  Record.hpp  Utils.cpp  Utils.hpp  data.txt  main.cpp
ConsoleRenderer/: Buffer.cpp  Buffer.hpp  Console.cpp  Console.hpp  ConsoleRenderer.cpp  ConsoleRenderer.hpp  DataListRenderable.cpp  DataListRenderable.hpp  InputField.cpp  InputField.hpp  Renderable.cpp  Renderable.hpp  Screen.cpp  Screen.hpp  TextField.cpp  TextField.hpp
ConsoleRenderer/Renderables/: DataListRenderable.cpp  DataListRenderable.hpp  InputField.cpp  InputField.hpp  TextField.cpp  TextField.hpp
Screens/: DetailsScreen.cpp  DetailsScreen.hpp  ListScreen.cpp  ListScreen.hpp
